@@ -1900,6 +1900,10 @@ In principle, columns in C<@cols> should contain unique values;
 nevertheless if it happens that multiple rows have the same
 values for C<@cols>, then later rows overwrite earlier ones.
 
+A C<sub> reference can be given instead of C<@cols>; that subroutine
+will be called for each row and should return a list of scalar values
+to be used as hash keys.
+
 
 =item L<flat_arrayref|DBIx::DataModel::Schema::ResultAs::Flat> (or just C<flat>)
 
@@ -2000,14 +2004,18 @@ of rows.
 
 =item L<categorize|DBIx::DataModel::Schema::ResultAs::Categorize>
 
-  my $tree = $source->select(..., $result_as => [categorize => ($key1, $key2)]);
+  my $tree = $source->select(..., $result_as => [categorize => ($column1, ...)]);
 
-Builds a tree of rows through module L<List::Categorize>, with
-C<$key1>, C<$key2>, etc. as categorization keys. This is quite similar
+Builds a tree of lists of rows through module L<List::Categorize>, with
+the content of C<$column1>, etc. as categorization keys. This is quite similar
 to the C<hashref> result kind, except that the categorization keys
 need not be unique : each leaf of the tree will contain I<lists>
 of rows matching those categories, while the C<hashref> result kind
 only keeps the I<last> row matching the given keys.
+
+Instead of a list of column names, the argument can be a reference
+to a subroutine. That subroutine will we called
+for each row and should return a list of scalar values to be used as categorization keys.
 
 =item L<table|DBIx::DataModel::Schema::ResultAs::Table>
 
