@@ -12,7 +12,16 @@ use namespace::clean;
 sub new {
   my $class = shift;
 
-  my $self = {cols => \@_};
+  my $self;
+
+  if ((ref $_[0] || '') eq 'CODE') {
+    $self = {make_key => shift};
+    !@_ or croak "-result_as => [hashref => sub {...}] : improper other args after sub{}";
+  }
+  else {
+    $self = {cols => \@_};
+  }
+
   return bless $self, $class;
 }
 
@@ -20,15 +29,18 @@ sub new {
 sub get_result {
   my ($self, $statement) = @_;
 
-  my @cols = @{$self->{cols}};
-  @cols = $statement->meta_source->primary_key              if !@cols;
-  croak "-result_as=>'hashref' impossible: no primary key"  if !@cols;
+  my $make_key = $self->{make_key} || do {
+    my @cols = @{$self->{cols}};
+    @cols = $statement->meta_source->primary_key              if !@cols;
+    croak "-result_as=>'hashref' impossible: no primary key"  if !@cols;
+    sub {my $row = shift; map {defined $row->{$_} ? $row->{$_} : ''} @cols};
+  };
 
   $statement->execute;
 
   my %hash;
   while (my $row = $statement->next) {
-    my @key = map {defined $row->{$_} ? $row->{$_} : ''} @cols;
+    my @key = $make_key->($row);
     my $last_key_item = pop @key;
     my $node          = \%hash;
     $node = $node->{$_} ||= {} foreach @key;
@@ -49,21 +61,33 @@ DBIx::DataModel::Schema::ResultAs::Hashref - arrange data rows in a hash
 
 =head1 SYNOPSIS
 
-  $source->select(..., -result_as => 'hashref');
+  my $tree = $source->select(..., -result_as => 'hashref');
   # or
-  $source->select(..., -result_as => [hashref => ($key1, ...)]);
+  my $tree = $source->select(..., -result_as => [hashref => ($column1, ...)]);
+  # or
+  my $tree = $source->select(..., -result_as => [hashref => sub {...}]);
 
 =head1 DESCRIPTION
 
-The result will be a hashref. Keys in the hash correspond to distinct
-values of the specified columns, and values are data row objects.
-If the argument is given as C<< [hashref => @cols] >>, the column(s)
-are specified by the caller; otherwise if the argument is given
-as a simple string, C<@cols> will default to C<< $source->primary_key >>.
-If there is more than one column, the result will be a tree of nested hashes.
-This C<-result_as> is normally used only where the key fields values 
-for each row are unique. If multiple rows are returned with the same
-values for the key fields then later rows overwrite earlier ones.
+Returns a nested tree of hashrefs; leaves of the tree are data rows,
+and keys of the hashes are column values. The depth of the tree corresponds
+to the number of columns given as argument. In most cases there is just one
+single column, so the result is just an ordinary hashref.
+
+This C<-result_as> is normally used only in situations where the key
+fields values for each row are unique. If multiple rows are returned
+with the same values for the key fields then later rows overwrite
+earlier ones.
+
+Instead of a list of column names, the argument can be a reference
+to a subroutine. That subroutine will we called
+for each row and should return a list of scalar values to be used as hash keys.
+
+
+In absence of column or S<sub> arguments, the primary
+key of the $source will be used.
+
+
 
 
 
